2013-03-29	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/range.c: fixed parsing of LENGTH value

2013-03-28	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/common_macros.h, +src/cidr.h, +src/cidr.c, src/main.c, Makefile.am:
	  - common_macros.h: added 'EASY_ERROR' macro
	  - provide 'cidr' command
	* lib/net.c:
	  - fixed bug in mask calculation
	  - fixed off-the-end error
	* man/rgxg.1:
	  - document 'alternation', 'escape' and 'cidr' command

2013-03-27	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/rgxg/types.h, +include/rgxg/net.h, +lib/net.c, Makefile.am:
	  - provide 'rgxg_net_cidr_ipv4' function
	  - provide 'rgxg_net_cidr_ipv6' function
	  - provide 'rgxg_net_cidr_string' function

2013-03-26	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/rgxg/types.h, lib/number.c, src/common_macros.h,
	  src/range.c, man/rgxg.1:
	  - common_macros.h: added 'EASY_MUTEX_OPTION' macro
	  - range.c: use 'src/common_macros.h'
	  - added 'RGXG_VARLEADINGZERO' option
	  - added '-Z' option to 'range' command

2013-03-25	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/rgxg/number.h, src/range.h:
	  - added missing 'extern' keyword to function declarations
	* include/rgxg/utils.h, src/escape.h, src/alternation.h:
	  - added missing parameter names to function declarations
	* lib/number.c:
	  - use 'lib/common_macros.h'
	* m4/lib_version.m4, README:
	  - added note about libtool version
	* include/rgxg/number.h, lib/number.c, src/range.c, man/rgxg.1:
	  - rgxg_number_greaterequal: fixed bug with leading zeros
	  - added 'min_length' parameter to 'rgxg_number_range'
	    and 'rgxg_number_greaterequal' functions
	  - added '-m' option to 'range' command

2013-03-24	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* +include/rgxg/utils.h, +lib/utils.c,
	  +lib/common_macros.h, Makefile.am:
	  - provide 'rgxg_utils_escape_string' function
	  - provide 'rgxg_utils_alternation' function
	* src/main.c, src/range.h, src/range.c: