@@ -39,13 +39,13 @@ typedef struct ipv6_s {
     uint16_t hextet[8];
 } ipv6_t;
 
-extern int rgxg_net_cidr_ipv4 (ipv4_t *address, int prefix, char *regex,
+extern int rgxg_net_cidr_ipv4 (const ipv4_t *address, int prefix, char *regex,
         rgxg_options_t options);
 
-extern int rgxg_net_cidr_ipv6 (ipv6_t *address, int prefix, char *regex,
+extern int rgxg_net_cidr_ipv6 (const ipv6_t *address, int prefix, char *regex,
         rgxg_options_t options);
 
-extern int rgxg_net_cidr_string (char *cidr, char *regex,
+extern int rgxg_net_cidr_string (const char *cidr, char **endptr, char *regex,
         rgxg_options_t options);
 
 #endif /* _RGXG_NET_H_INCLUDED */
